// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Default Label matching the snapshot 1`] = `
.c0 {
  text-align: left;
  margin-bottom: 0;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: inherit;
  font-family: "ff-din-web",Helvetica,Arial,sans-serif;
  font-size: 2rem;
  font-weight: normal;
  color: #00003C;
}

<LowercaseLabel>
  <styled.label
    color="textPrimary"
    fontSize="2rem"
    fontWeight="normal"
    letterSpacing="normal"
    lowercase={true}
  >
    <label
      className="c0"
      color="textPrimary"
      fontSize="2rem"
      fontWeight="normal"
      letterSpacing="normal"
    />
  </styled.label>
</LowercaseLabel>
`;

exports[`(Styled Component) Label matching the snapshot 1`] = `
.c0 {
  text-align: left;
  margin-bottom: 0;
  -webkit-letter-spacing: .1rem;
  -moz-letter-spacing: .1rem;
  -ms-letter-spacing: .1rem;
  letter-spacing: .1rem;
  text-transform: uppercase;
  font-family: "ff-din-web",Helvetica,Arial,sans-serif;
  font-size: 1.4rem;
  font-weight: 500;
  color: #00003C;
}

<styled.label
  color="textPrimary"
  fontSize="1.4rem"
  fontWeight="500"
  letterSpacing=".1rem"
>
  <label
    className="c0"
    color="textPrimary"
    fontSize="1.4rem"
    fontWeight="500"
    letterSpacing=".1rem"
  />
</styled.label>
`;
